2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/MonoMacProject.xpt.xml: Add a MainWindow.

2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.MonoMac.csproj: Remove Mono.Addins targets as
	  they seem to be broken.

2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/MonoMacViewWithControllerXib.xft.xml:
	* templates/MonoMacWindowWithControllerXib.xft.xml: Add some
	  strongly typed accessors.

2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.MonoMac.csproj:
	* MonoDevelop.MonoMac.addin.xml:
	* templates/MonoMacPlist.xft.xml:
	* templates/MonoMacViewXib.xft.xml:
	* templates/MonoMacProject.xpt.xml:
	* templates/MonoMacEmptyXib.xft.xml:
	* templates/MonoMacWindowXib.xft.xml:
	* templates/MonoMacProjectEmpty.xpt.xml:
	* templates/MonoMacDocumentWindowXib.xft.xml:
	* templates/MonoMacApplicationManifest.xft.xml:
	* templates/MonoMacViewWithControllerXib.xft.xml:
	* templates/MonoMacWindowWithControllerXib.xft.xml: Lots of
	  templates and cleanup.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/MonoMacViewXib.xft.xml:
	* templates/MonoMacViewWithControllerXib.xft.xml: Fix
	  templates.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/MonoMacProject.xpt.xml: Fix menu labels.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.MonoMac.csproj:
	* MonoDevelop.MonoMac.addin.xml:
	* templates/MonoMacViewXib.xft.xml:
	* templates/MonoMacProject.xpt.xml:
	* templates/MonoMacProjectEmpty.xpt.xml:
	* templates/MonoMacApplicationManifest.xft.xml:
	* templates/MonoMacViewWithControllerXib.xft.xml: More &
	  better templates.

	* templates/MonoMacPList.xft.xml:
	* templates/MonoMacEmptyXib.xft.xml:
	* templates/MonoMacViewController.xft.xml:
	* templates/MonoMacApplicationXib.xft.xml:
	* templates/MonoMacWindowBasedProject.xpt.xml: Removed unused
	  files.

	* MonoMacCodeBehind.cs: Don't set the base class, let the user