@@ -1,3 +1,7 @@
+2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoMacLaunchScript.sh: Launch script now checks for Mono
+
 2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* templates/MonoMacProject.xpt.xml: Add a MainWindow.
